2009-11-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/chol.cc (get_chol_l): New helper function.
	(Fchol): Use it to set MatrixType for lower triangular factors as
	well. Use default octave_idx_type->octave_value conversion.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (do_accumarray_sum): Simplify.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (octave_struct::save_binary): Save dimensions for
	structs.
	(octave_struct::load_binary): Load dimensions if present, 
	use 1x1 otherwise.

2009-11-23  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fmerge): Add missing parentheses.

2009-11-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov-complex.h (octave_complex::bool_value,
	octave_complex::bool_array_value): New methods.
	* ov-flt-complex.h (octave_float_complex::bool_value,
	octave_float_complex::bool_array_value): New methods.
	* ov-cx-mat.cc (octave_complex_matrix::bool_array_value): New method.
	* ov-cx-mat.h: Declare it.
	* ov-flt-cx-mat.cc (octave_float_complex_matrix::bool_array_value):
	New method.
	* ov-flt-cx-mat.h: Declare it.

2009-11-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (octave_struct::save_ascii): Save dimensions for
	structs.
	(octave_struct::load_ascii): Load dimensions if present, 
	use 1x1 otherwise.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fmerge): Correct query for logical masks.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* utils.cc (dims_to_numel): Fallback to index_vector query for
	non-numeric types.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-bool.h (octave_bool::is_numeric_type): New overload.
	* ov-bool-mat.h (octave_bool-matrix::is_numeric_type): New overload.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (unary_mapper_t): New member: umap_erfinv.
	* ov-base.c (octave_base_value::get_umap_name): Add "erfinv" here.
	* ov.h (octave_value::erfinv): New method.
	* ov-scalar.cc (octave_scalar::map): Handle umap_erfinv.