@@ -1,3 +1,7 @@
+2009-11-26  Jaroslav Hajek  <highegg@gmail.com>
+
+	* data.cc (Fismatrix): Return true for empty matrices as well.
+
 2009-11-25  Jaroslav Hajek  <highegg@gmail.com>
 
 	* DLD-FUNCTIONS/chol.cc (get_chol_l): New helper function.
